--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,28 @@
 fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
+SQLAlchemy==2.0.28
+psycopg2-binary==2.9.9
+python-jose==3.3.0
+bcrypt==4.1.2
+cffi==1.16.0
+contourpy==1.2.0
+cryptography==42.0.5
+cycler==0.12.1
+ecdsa==0.18.0
+fonttools==4.49.0
+kiwisolver==1.4.5
+matplotlib==3.8.3
+numpy==1.26.4
+packaging==23.2
+passlib==1.7.4
+pillow==10.2.0
+psycopg2-binary==2.9.9
+pyasn1==0.5.1
+pycparser==2.21
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
+typing_extensions==4.10.0
