--- a/dockerfile.dev
+++ b/dockerfile.dev
@@ -15,4 +15,4 @@ EXPOSE 8000
 COPY ./app /code/app
 
 # Command to run on container start
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--debug"]
