--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
-SQLAlchemy==2.0.28
-psycopg2-binary==2.9.9
-python-jose==3.3.0
 bcrypt==4.1.2
 cffi==1.16.0
 contourpy==1.2.0
@@ -23,6 +20,9 @@ pycparser==2.21
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-jose==3.3.0
+python-multipart==0.0.9
 rsa==4.9
 six==1.16.0
+SQLAlchemy==2.0.28
 typing_extensions==4.10.0
+
