add dock conf, role table, association and alembic auto migration conf

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,8 @@ services:
             - .:/code
         environment:
             - ENV=development
+            - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
+            - SECRET_KEY=51bc49c1b96f286c39b2ef7fbab6885ac993332d6ee17940d213dc0d02283c82
         depends_on:
             - postgres
     # Postgres service
