--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
+alembic==1.13.1
 bcrypt==4.1.2
 cffi==1.16.0
 contourpy==1.2.0
@@ -9,6 +10,8 @@ cycler==0.12.1
 ecdsa==0.18.0
 fonttools==4.49.0
 kiwisolver==1.4.5
+Mako==1.3.2
+MarkupSafe==2.1.5
 matplotlib==3.8.3
 numpy==1.26.4
 packaging==23.2
@@ -19,6 +22,7 @@ pyasn1==0.5.1
 pycparser==2.21
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 rsa==4.9
