--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-fastapi>=0.68.0,<0.69.0
-pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
 alembic==1.13.1
+asgiref==3.7.2
 bcrypt==4.1.2
 cffi==1.16.0
+click==8.1.7
 contourpy==1.2.0
 cryptography==42.0.5
 cycler==0.12.1
+dnspython==2.6.1
 ecdsa==0.18.0
+email_validator==2.1.1
+fastapi==0.68.2
 fonttools==4.49.0
+h11==0.14.0
+idna==3.6
 kiwisolver==1.4.5
 Mako==1.3.2
 MarkupSafe==2.1.5
@@ -20,6 +24,7 @@ pillow==10.2.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pycparser==2.21
+pydantic==1.10.14
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -28,5 +33,7 @@ python-multipart==0.0.9
 rsa==4.9
 six==1.16.0
 SQLAlchemy==2.0.28
+starlette==0.14.2
 typing_extensions==4.10.0
+uvicorn==0.15.0
 
